[package]
name = "allsorts-tools"
version = "0.4.2"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"
publish = false

[[bin]]
name = "allsorts"
path = "src/main.rs"

[dependencies]
atty = "0.2.13"
encoding_rs = "0.8.16"
gumdrop = "0.7.0"
png = "0.15.3"

[dependencies.allsorts]
version = "0.5.0"
