[package]
name = "allsorts-tools"
version = "0.11.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"
publish = false

[[bin]]
name = "allsorts"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8.16"
gumdrop = "0.7.0"
png = "0.15.3"
xmlwriter = "0.1.0"

[dependencies.allsorts]
version = "0.14.1"

[dev-dependencies]
assert_cmd = "1"
predicates = "2"
